sessions/09-gateway-api-and-tls/subsessions/04-tls-termination/01-https-gateway-listener.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-web-https
  namespace: gateway-lab
spec:
  gatewayClassName: alb
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: message-board.example.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: message-board-tls
      allowedRoutes:
        namespaces:
          from: Same
